<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_name"
        style="@style/FormEditText"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edit_text_sobre_nome"
        style="@style/FormEditText"
        android:hint="@string/sobreNome" />

    <EditText
        android:id="@+id/edit_text_curso"
        style="@style/FormEditText"
        android:hint="@string/curso" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/text_selecionar_curso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecionar_curso"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"/>

    <Spinner
        android:id="@+id/spiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:layout_margin="12dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_telefone"
        style="@style/FormEditText"
        android:hint="@string/contato"
        android:inputType="phone"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLimpar"
        style="@style/FormButton"
        android:layout_marginStart="85dp"
        android:text="@string/limpar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSalvar"
        style="@style/FormButton"
        android:text="@string/salvar" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFinalizar"
        style="@style/FormButton"
        android:layout_width="match_parent"
        android:text="@string/finalizar" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>