<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_name"
        style="@style/FormEditText"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_tittle" />

    <EditText
        android:id="@+id/edit_text_sobre_nome"
        style="@style/FormEditText"
        android:hint="@string/sobreNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

    <EditText
        android:id="@+id/edit_text_curso"
        style="@style/FormEditText"
        android:hint="@string/curso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_sobre_nome" />

    <TextView
        android:id="@+id/text_selecionar_curso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecionar_curso"
        android:textSize="22sp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_telefone" />

    <Spinner
        android:id="@+id/spiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_selecionar_curso" />

    <EditText
        android:id="@+id/edit_text_telefone"
        style="@style/FormEditText"
        android:hint="@string/contato"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_curso" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLimpar"
        style="@style/FormButton"
        android:text="@string/limpar"
        app:layout_constraintEnd_toStartOf="@+id/buttonSalvar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spiner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSalvar"
        style="@style/FormButton"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonLimpar"
        app:layout_constraintTop_toBottomOf="@+id/spiner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFinalizar"
        style="@style/FormButton"
        android:layout_width="match_parent"
        android:text="@string/finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSalvar" />

</androidx.constraintlayout.widget.ConstraintLayout>